<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_act"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/whole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/record"
            android:layout_width="268dp"
            android:layout_height="322dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/record" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

                <SeekBar
                    android:id="@+id/sweep"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:text="@string/textview" />
            </LinearLayout>

        <LinearLayout
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/rewind"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:longClickable="false"
                    android:text="@string/prev"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/pause"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:onClick="pause"
                    android:text="@string/pause"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/play"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:onClick="play"
                    android:text="@string/play"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/stop"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:onClick="stop"
                    android:text="@string/stop"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/fastforward"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:text="@string/ff"
                    android:textAllCaps="false" />

            </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>